# TopDown-SFML-GameEngine

./: .gitignore  CMakeLists.txt  main.cpp  main.h
Assets/: world.csv
Camera/: Camera.cpp
Enums/: Animation.h  GameState.h  NpcState.h  NpcType.h
Game/: Game.cpp  Game.h
Helpers/: Button.cpp  Button.h  Event.h  Helper.cpp  Helper.h
Npc/: Npc.cpp  Npc.h
Player/: Player.cpp  Player.h
TileMap/: TileMap.cpp  TileMap.h
TopDownRpg-SFML/x64/Debug/: NpcState.h.ifc  NpcState.h_DEFB66526F37527B.ifc.dt.d.json  NpcState.h_DEFB66526F37527B.ifc.dt.module.json  NpcState.h_DEFB66526F37527B.ifc.dt.module.json.command  NpcType.h.ifc  NpcType.h_A3D0C4351EEE07E.ifc.dt.d.json  NpcType.h_A3D0C4351EEE07E.ifc.dt.module.json  NpcType.h_A3D0C4351EEE07E.ifc.dt.module.json.command  TopDownRpg-SFML.ilk  game.h.ifc.d.json  npcstate.h.module.json  npctype.h.module.json  vc145.idb  world.new.obj.enc
TopDownRpg-SFML/x64/Debug/TopDownRpg-SFML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TopDownRpg-SFML/x64/Debug/TopDownRpg-SFML_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
TopDownRpg-SFML/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
World/: DrawLayer.h  World.cpp  World.h
